# lincolnnguyen.me

./: .gitignore  .graphqlconfig  graphql.config.js  package-lock.json
aws-cdk/: .env.example  .eslintignore  .eslintrc.cjs  .gitignore  cdk.json  package-lock.json  package.json
aws-cdk-old/: package-lock.json  package.json
aws-cdk2/: cdk.json  package-lock.json  package.json
backend/: .env  .env.example  .env.production  .eslintrc.cjs  .eslintrc.json  Dockerfile  index.js  package-lock.json  package.json
backend2/: .env.example  Dockerfile  index.js  package-lock.json  package.json  tsconfig.json
cassandra_example/: main.py  models.py  mypy.ini  pyproject.toml
cassandra_example/tests/: test_example.py
cdk/: .eslintrc  .gitignore  cdktf.json  main.ts  package-lock.json  package.json  tsconfig.json
docker-compose/: docker-compose.yml  nginx.conf  package.json
docs/: cloudfront key pair generation  setup.sh  todo.md  user flow.md
flood-simulator/: main.py  maze.ipynb
frontend/: .env.development  .env.example  .env.production  .eslintrc.json  .gitignore  package-lock.json  package.json  tailwind.config.js
frontend2/: .eslintrc.cjs  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  theme.js  tsconfig.json
frontend3/: .eslintrc.js  .gitignore  package-lock.json  package.json  tailwind.config.js
infra/: Pulumi.yaml  README.md  index.ts  package-lock.json  package.json  tsconfig.json
multiple_entry_points/: cli.py  web.py
notebooks/: sandbox.ipynb
pipenv-strawberry/: Pipfile  main.py
react-sandbox/: package-lock.json  (+2 more)
(+471 files in other folders)
